--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 datasource.first.url=jdbc:tddl:tdatasource://DITING_ONLINE_APP?isSharding=false
 datasource.second.url=jdbc:tddl:tdatasource://DITING_MANAGEMENT_APP?isSharding=false
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+mybatis.mapper-locations=classpath:com/alibaba/api2doc/*.xml
