修改数据源

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
-datasource.first.url=jdbc:tddl:tdatasource://DITING_ONLINE_APP?isSharding=false
-datasource.second.url=jdbc:tddl:tdatasource://DITING_MANAGEMENT_APP?isSharding=false
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.first.url=jdbc:mysql://127.0.0.1:3306/jiayu?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.second.url  =jdbc:mysql://127.0.0.1:3306/datasourcetwo?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.first.username=root
+spring.datasource.first.password=140466
+spring.datasource.second.username=root
+spring.datasource.second.password=140466
+spring.datasource.first.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.second.driver-class-name=com.mysql.cj.jdbc.Driver
+
 mybatis.mapper-locations=classpath:com/alibaba/api2doc/*.xml
